Actions
Bug #13523
closedlibsmbns: symbol 'smb_node_type' is multiply-defined
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol 'smb_node_type' is multiply-defined: (file pics/smbns_browser.o type=OBJT; file pics/smbns_netbios.o type=OBJT); ld: fatal: symbol 'smb_node_type' is multiply-defined: (file pics/smbns_browser.o type=OBJT; file pics/smbns_netbios_cache.o type=OBJT); ld: fatal: symbol 'smb_node_type' is multiply-defined: (file pics/smbns_browser.o type=OBJT; file pics/smbns_netbios_datagram.o type=OBJT); ld: fatal: symbol 'smb_node_type' is multiply-defined: (file pics/smbns_browser.o type=OBJT; file pics/smbns_netbios_name.o type=OBJT); ld: fatal: symbol 'smb_node_type' is multiply-defined: (file pics/smbns_browser.o type=OBJT; file pics/smbns_netlogon.o type=OBJT); ld: fatal: file processing errors. No output written to libsmbns.so.1 collect2: error: ld returned 1 exit status *** Error code 1 dmake: Fatal error: Command failed for target `libsmbns.so.1' Current working directory /code/illumos-gate/usr/src/lib/smbsrv/libsmbns/i386
Testing done: build/install/boot
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0189c0b054f5460e8b23f56112cd0763c993cd05
commit 0189c0b054f5460e8b23f56112cd0763c993cd05 Author: Toomas Soome <tsoome@me.com> Date: 2021-02-19T15:29:02.000Z 13523 libsmbns: symbol 'smb_node_type' is multiply-defined Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions