13523 libsmbns: symbol 'smb_node_type' is multiply-defined Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Approved by: Gordon Ross <gordon.w.ross@gmail.com>